# python-rss-reader

./: .gitignore  README.md  rss_reader.py  setup.cfg
data/: news.json  test_cache.json
src/: rss_class.py  rss_exeption.py  utils.py
src/reader/: rss_entities.py  rss_exeptions.py  rss_reader.py  rss_reader_test.py  rss_utils.py
src/reader/test/: rss_class_test.py
src/reader/test/data/: test.html  test_cache.json
