[metadata]
name = rss_reader
attr: reader.__version__
author = Valentina Pradun
url = https://github.com/valyapradun/python-rss-reader
description = RSS reader is a command-line utility which receives RSS and prints results in human-readable format
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
zip_safe = True
include_package_data = True
install_requires =
    feedparser

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    rss_reader = reader.rss_reader:main



